# griptape-nodes-library-googleai

./: .gitignore  Makefile  README.md  node-development-guide-v2.md  pyproject.toml
googleai/: base_analyze_media.py  describe_media.py  gemini_3_1_flash_image_generator.py  gemini_3_pro_image_generator.py  gemini_image_generator.py  googleai_utils.py  griptape-nodes-library.json  griptape_nodes_library.json  identify_timecodes.py  image_generator.py  imagen_image_generator.py  last_frame.py  lyria_audio_generator.py  multi_audio_display.py  multi_video_display.py  utils.py  veo_image_to_video_generator.py  veo_text_to_video_with_ref.py  veo_video_generator.py  video_display.py
googleai/workflows/templates/: google_veo_frog_with_teeth.py
