[project]
name = "googleai"
version = "0.1.0"
description = "Griptape Node Library for Google AI"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.110.0",
    "google-cloud-storage>=2.19.0",
    "google-generativeai>=0.8.5",
    "griptape-nodes",
    "requests>=2.32.3",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
